--- a/pflf/public/index.html
+++ b/pflf/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="join-screen">
-        <h1 class="">Добро пожаловать в уютный чатик >.<<br>Как вас зовут?</h1>
+        <h1 class="">Добро пожаловать в чатик<br>Как вас зовут?</h1>
         <br>
         <input id="username" type="text" required placeholder="Ваше имя...">
         <button id="join-chat-btn">Начать</button>
@@ -17,7 +17,6 @@
     <div class="container blur-element">
         <div class="header">
             <div class="logo">
-                <img src="\images\logo.png" alt="logo">
                 <div class="logoname">Chatik</div>
             </div>
             <ul>
